--- a/style.css
+++ b/style.css
@@ -23,15 +23,15 @@
 .BLOCK{
   display: flex;
   flex-direction: row;
-  justify-content: space;
   flex-wrap: wrap;
+  align-items: flex-start;
 }
 .BLOCK_BOTTOM {
   display: flex;
   flex-direction: column;
-  justify-content: space;
 }
 .BLOCK_DESCRIPTION{
+  display: flex;
   font-weight: 300;
 }
 .BLOCK_HEADING{
@@ -62,25 +62,21 @@
   display: flex;
   flex-direction: column;
   width: 100%;
-  margin: 0.5em;
 }
 .BLOCK_PART_2{
   display: flex;
   flex-direction: column;
   width: calc( ( 100% - 4em) / 2 );
-  margin: 0.5em;
 }
 .BLOCK_PART_3{
   display: flex;
   flex-direction: column;
   width: calc( ( 100% - 4em) / 3 );
-  margin: 0.5em;
 }
 .BLOCK_PART_4 {
   display: flex;
   flex-direction: column;
   width: calc( ( 100% - 4em) / 4 );
-  margin: 0.5em;
 }
 .BORDER_BOTTOM {
   border-bottom: solid #069 1px;
@@ -110,6 +106,9 @@
   font-weight: 700;
   margin-right: 1em;
 }
+.CONTENT_BETWEEN {
+  justify-content: space-between;
+}
 .CONTENT_CENTER{
   justify-content: center;
   align-items: center;
@@ -122,14 +121,6 @@
 }
 .DISPLAY_NONE {
   display: none;
-}
-.ICONS{
-  width: 4em;
-}
-.INPUT {
-  width: 100%;
-  height: 2em;
-  padding: 0.2em 1em 0.2em 1em;
 }
 .FLEX_1{
   flex: 1;
@@ -148,6 +139,14 @@
 .FLEX_START {
   align-items: flex-start;
 }
+.ICONS{
+  width: 4em;
+}
+.INPUT {
+  width: 100%;
+  height: 2em;
+  padding: 0.2em 1em 0.2em 1em;
+}
 .MAP {
   overflow:hidden;
   position:relative;
@@ -159,6 +158,9 @@
   top: 0;
   width: 100%;
   height: 100%;
+}
+.MARGIN_A_05 {
+  margin: 0.5em 0.5em 0.5em 0.5em
 }
 .MARGIN_B_05 {
   margin-bottom: 0.5em;
@@ -224,6 +226,9 @@
 }
 .PADDING_A_5_10_5_10 {
   padding: 5em 10em 5em 10em;
+}
+.PADDING_B_1 {
+  padding-bottom: 1em;
 }
 .PADDING_B_2 {
   padding-bottom: 2em;
@@ -307,45 +312,69 @@
 
 /* стили для анимаций */
 @media only screen and (min-width: 1280px){
+@-webkit-keyframes appearance {
+  from {opacity: 0;}
+  to {opacity: 1;}
+  }
 @keyframes appearance {
   from {opacity: 0;}
   to {opacity: 1;}
   }
 .APPEARANCE {
   opacity:0;
+  -webkit-transition: 1s;
+  -o-transition: 1s;
   transition: 1s; /* скорость перехода состояния элемента */
-  animation: appearance 3s 1; /* название анимации, её время и количество повторов */
-  animation-fill-mode: forwards; /* чтобы элемент оставался в конечном состоянии анимации */
+  -webkit-animation: appearance 3s 1;
+          animation: appearance 3s 1; /* название анимации, её время и количество повторов */
+  -webkit-animation-fill-mode: forwards;
+          animation-fill-mode: forwards; /* чтобы элемент оставался в конечном состоянии анимации */
   }
 .ANIMATION_DELAY_1 {
+  -webkit-animation-delay: 1s;
   animation-delay: 1s;
   }
 .ANIMATION_DELAY_2 {
+  -webkit-animation-delay: 2s;
   animation-delay: 2s;
   }
 .ANIMATION_DELAY_3 {
+  -webkit-animation-delay: 3s;
   animation-delay: 3s;
   }
 .ANIMATION_DELAY_5 {
+  -webkit-animation-delay: 5s;
   animation-delay: 5s;
+  }
+@-webkit-keyframes move_header_r {
+  from {margin-left: 40em;}
+  to {margin-left: 0;}
   }
 @keyframes move_header_r {
   from {margin-left: 40em;}
   to {margin-left: 0;}
   }
 .MOVE_HEADER_R {
+  -webkit-transition: 1s;
+  -o-transition: 1s;
   transition: 1s; /* скорость перехода состояния элемента */
-  animation: move_header_r 1.2s 1; /* название анимации, её время и количество повторов */
-  animation-fill-mode: forwards; /* чтобы элемент оставался в конечном состоянии анимации */
+  -webkit-animation: move_header_r 1.2s 1;
+          animation: move_header_r 1.2s 1; /* название анимации, её время и количество повторов */
+  -webkit-animation-fill-mode: forwards;
+          animation-fill-mode: forwards; /* чтобы элемент оставался в конечном состоянии анимации */
   }
 @keyframes move_header_t {
   from {margin-top: 10em;}
   to {margin-top: 0;}
   }
 .MOVE_HEADER_T {
+  -webkit-transition: 4s;
+  -o-transition: 4s;
   transition: 4s; /* скорость перехода состояния элемента */
-  animation: move_header_t 2.5s 1; /* название анимации, её время и количество повторов */
-  animation-fill-mode: forwards; /* чтобы элемент оставался в конечном состоянии анимации */
+  -webkit-animation: move_header_t 2.5s 1;
+          animation: move_header_t 2.5s 1; /* название анимации, её время и количество повторов */
+  -webkit-animation-fill-mode: forwards;
+          animation-fill-mode: forwards; /* чтобы элемент оставался в конечном состоянии анимации */
   }
 }
 
@@ -452,7 +481,7 @@
     padding: 0;
   }
 }
-@media only screen and (min-resolution: 210dpi){
+@media only screen and (min-resolution: 210dpi), and (handheld){
   * {
     font-size: 110%;
   }
@@ -481,7 +510,7 @@
     margin-left: 1em;
   }
 }
-@media only screen and (min-resolution: 280dpi){
+@media only screen and (min-resolution: 280dpi), and (handheld){
   * {
     font-size: 115%;
   }
