--- a/css/animation.css
+++ b/css/animation.css
@@ -5,11 +5,11 @@
   to {opacity: 1;}
   }
 @keyframes appearance {
-  from {opacity: 0;}
-  to {opacity: 1;}
+  from {opacity: 0}
+  to {opacity: 1}
   }
 .APPEARANCE {
-  opacity:0;
+  opacity: 0;
   -webkit-transition: 1s;
   -o-transition: 1s;
   transition: 1s; /* скорость перехода состояния элемента */
